
-------------------------------------------------------------------------------

Mon Nov 15 09:07:28 PST 1999
(Raster)

bounds checking fix :) thanks alan strange :)

-------------------------------------------------------------------------------

Mon Nov 15 09:34:29 PST 1999
(Mandrake)

fixed a pretty nasty uninitialized memory test.

-------------------------------------------------------------------------------

Mon Nov 15 14:53:40 PST 1999
(Mandrake)

fixed an uninitialized memory check in menus.c (reported by Alan Stange - this
man is getting it on with debuggers - I will put his name in the credits
sometime this week for 0.16.3)

-------------------------------------------------------------------------------

Fri Nov 19 16:34:16 EST 1999
(Christian)

Fixed a segfault that Paul Radford <prbluebottle@netscape.net>
reported: "Minimize a window into an iconbox, close the icon-
box and minimize the app again". I could not exactly reproduce
this because I already got segfaults when I _entered_ the window
that is uniconified when the iconbox is closed.

In any case, there were strange things going on with
mode.focuswin, because FocusToEWin(NULL) returns immediately
in clickmode ... hope the whole thing is history now.

-------------------------------------------------------------------------------

Fri Nov 19 18:58:56 PST 1999
(Raster)

fix variable expansion for file execcing...
fix mensu to be onscreen including submenus when u have menus onsreen selected.

-------------------------------------------------------------------------------

Mon Nov 22 12:42:56 PST 1999
(Mandrake)

added "current" option to win_op ipc command for walt :)

-------------------------------------------------------------------------------

Mon Dec  6 14:52:40 PST 1999
(Raster)

gettext internationalisation support & patch
fix to allow setting of which mouse button do what on the pager
fix to border width handlign in icccm
fix to warp foucs
some other stuff i probabyl forgot about...