@@ -1751,8 +1751,30 @@ HandleComms(XEvent * ev)
 			    "MWM_TITLE:              %5i\n"
 			    "MWM_MENU:               %5i\n"
 			    "MWM_MINIMIZE:           %5i\n"
-			    "MWM_MAXIMIZE:           %5i\n" "APP_STATE:              %5i\n", ewin->client.win, ewin->win, ewin->x, ewin->y, ewin->w, ewin->h, ewin->border->name, ewin->border->border.left, ewin->border->border.right, ewin->border->border.top, ewin->border->border.bottom, ewin->desktop, ewin->num_groups, ewin->docked, ewin->sticky, ewin->visible, ewin->iconified, ewin->shaded, ewin->active, ewin->layer, ewin->never_use_area, ewin->floating, ewin->client.w, ewin->client.h, ewin->client.icon_win, ewin->client.icon_pmap, ewin->client.icon_mask, ewin->client.group, ewin->client.need_input, ewin->client.transient, ewin->client.title, ewin->client.class, ewin->client.name, ewin->client.command, ewin->client.machine, ewin->client.icon_name, ewin->client.is_group_leader, ewin->client.no_resize_h, ewin->client.no_resize_v, ewin->client.shaped, ewin->client.width.min, ewin->client.height.min, ewin->client.width.max, ewin->client.height.max, ewin->client.base_w, ewin->client.base_h, ewin->client.w_inc, ewin->client.h_inc,
-			    ewin->client.aspect_min,
+			    "MWM_MAXIMIZE:           %5i\n"
+			    "APP_STATE:              %5i\n", ewin->client.win,
+			    ewin->win, ewin->x, ewin->y, ewin->w, ewin->h,
+			    ewin->border->name, ewin->border->border.left,
+			    ewin->border->border.right,
+			    ewin->border->border.top,
+			    ewin->border->border.bottom, ewin->desktop,
+			    ewin->num_groups, ewin->docked, ewin->sticky,
+			    ewin->visible, ewin->iconified, ewin->shaded,
+			    ewin->active, ewin->layer, ewin->never_use_area,
+			    ewin->floating, ewin->client.w, ewin->client.h,
+			    ewin->client.icon_win, ewin->client.icon_pmap,
+			    ewin->client.icon_mask, ewin->client.group,
+			    ewin->client.need_input, ewin->client.transient,
+			    ewin->client.title, ewin->client.class,
+			    ewin->client.name, ewin->client.command,
+			    ewin->client.machine, ewin->client.icon_name,
+			    ewin->client.is_group_leader,
+			    ewin->client.no_resize_h, ewin->client.no_resize_v,
+			    ewin->client.shaped, ewin->client.width.min,
+			    ewin->client.height.min, ewin->client.width.max,
+			    ewin->client.height.max, ewin->client.base_w,
+			    ewin->client.base_h, ewin->client.w_inc,
+			    ewin->client.h_inc, ewin->client.aspect_min,
 			    ewin->client.aspect_max,
 			    ewin->client.mwm_decor_border,
 			    ewin->client.mwm_decor_resizeh,
@@ -1810,56 +1832,26 @@ HandleComms(XEvent * ev)
 			    "MWM_MENU:               %5i\n"
 			    "MWM_MINIMIZE:           %5i\n"
 			    "MWM_MAXIMIZE:           %5i\n"
-			    "APP_STATE:              %5i\n",
-			    ewin->client.win,
-			    ewin->win,
-			    ewin->x,
-			    ewin->y,
-			    ewin->w,
-			    ewin->h,
-			    none,
-			    0,
-			    0,
-			    0,
-			    0,
-			    ewin->desktop,
-			    ewin->num_groups,
-			    ewin->docked,
-			    ewin->sticky,
-			    ewin->visible,
-			    ewin->iconified,
-			    ewin->shaded,
-			    ewin->active,
-			    ewin->layer,
-			    ewin->never_use_area,
-			    ewin->floating,
-			    ewin->client.w,
-			    ewin->client.h,
-			    ewin->client.icon_win,
-			    ewin->client.icon_pmap,
-			    ewin->client.icon_mask,
-			    ewin->client.group,
-			    ewin->client.need_input,
-			    ewin->client.transient,
-			    ewin->client.title,
-			    ewin->client.class,
-			    ewin->client.name,
-			    ewin->client.command,
-			    ewin->client.machine,
-			    ewin->client.icon_name,
+			    "APP_STATE:              %5i\n", ewin->client.win,
+			    ewin->win, ewin->x, ewin->y, ewin->w, ewin->h, none,
+			    0, 0, 0, 0, ewin->desktop, ewin->num_groups,
+			    ewin->docked, ewin->sticky, ewin->visible,
+			    ewin->iconified, ewin->shaded, ewin->active,
+			    ewin->layer, ewin->never_use_area, ewin->floating,
+			    ewin->client.w, ewin->client.h,
+			    ewin->client.icon_win, ewin->client.icon_pmap,
+			    ewin->client.icon_mask, ewin->client.group,
+			    ewin->client.need_input, ewin->client.transient,
+			    ewin->client.title, ewin->client.class,
+			    ewin->client.name, ewin->client.command,
+			    ewin->client.machine, ewin->client.icon_name,
 			    ewin->client.is_group_leader,
-			    ewin->client.no_resize_h,
-			    ewin->client.no_resize_v,
-			    ewin->client.shaped,
-			    ewin->client.width.min,
-			    ewin->client.height.min,
-			    ewin->client.width.max,
-			    ewin->client.height.max,
-			    ewin->client.base_w,
-			    ewin->client.base_h,
-			    ewin->client.w_inc,
-			    ewin->client.h_inc,
-			    ewin->client.aspect_min,
+			    ewin->client.no_resize_h, ewin->client.no_resize_v,
+			    ewin->client.shaped, ewin->client.width.min,
+			    ewin->client.height.min, ewin->client.width.max,
+			    ewin->client.height.max, ewin->client.base_w,
+			    ewin->client.base_h, ewin->client.w_inc,
+			    ewin->client.h_inc, ewin->client.aspect_min,
 			    ewin->client.aspect_max,
 			    ewin->client.mwm_decor_border,
 			    ewin->client.mwm_decor_resizeh,
