@@ -4006,3 +4006,10 @@ fix to allow setting of which mouse button do what on the pager
 fix to border width handlign in icccm
 fix to warp foucs
 some other stuff i probabyl forgot about...
+
+-------------------------------------------------------------------------------
+
+Mon Dec  6 14:57:42 PST 1999
+(Raster)
+
+how DID border s get that in there?????????????
